tree-sitter-coral/grammar.js
    source_file: ($) =>
      repeat(choice($._item, $._newline)),

    // ─── Top-level items ──────────────────────────────────────
    _item: ($) =>
      choice(
        $.function_definition,
        $.type_definition,
        $.enum_definition,
        $.store_definition,
        $.actor_definition,
        $.store_actor_definition,
        $.trait_definition,
        $.error_definition,
        $.taxonomy_definition,
        $.extern_function,
        $.use_statement,
        $.persist_store_definition,
        $._statement,
      ),

    // ─── Use / Import ─────────────────────────────────────────
    use_statement: ($) =>
      seq("use", $.dotted_name, $._newline),

    dotted_name: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    // ─── Function Definition ──────────────────────────────────
    function_definition: ($) =>
      seq(
        "*",
        field("name", $.identifier),
        "(",
        optional(field("parameters", $.parameter_list)),
        ")",
        $._newline,
        field("body", $.block),
      ),

    parameter_list: ($) =>
      commaSep1($.parameter),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_annotation))),
        optional(seq("?", field("default", $._expression))),
      ),

    type_annotation: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    // ─── Extern Function ──────────────────────────────────────
    extern_function: ($) =>
      seq(
        "extern",
        "fn",
        field("name", $.identifier),
        "(",
        optional(field("parameters", $.parameter_list)),
        ")",
        optional(seq(":", field("return_type", $.type_annotation))),
        $._newline,
      ),

    // ─── Type Definition ──────────────────────────────────────
    type_definition: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        optional($._trait_with_clause),
        $._newline,
        optional(field("body", $.type_body)),
      ),

    type_body: ($) =>
      seq(
        $._indent,
        repeat(choice($.field_definition, $.function_definition, $.with_clause, $._newline)),
        $._dedent,
      ),

    field_definition: ($) =>
      seq(
        optional("&"),
        field("name", $.identifier),
        optional(choice(
          seq("?", field("default", $._expression)),
          seq("is", field("default", $._expression)),
        )),
        $._newline,
      ),

    _trait_with_clause: ($) =>
      seq("with", commaSep1($.identifier)),

    enum_definition: ($) =>
      seq("enum", field("name", $.identifier), $._newline,
        optional(field("body", $.enum_body))),

    enum_body: ($) =>
      seq($._indent, repeat(choice($.variant_definition, $._newline)), $._dedent),

    variant_definition: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", optional(commaSep1($.identifier)), ")")),
        $._newline,
      ),

    // ─── Store / Actor / Trait ──────────────────────────────
    trait_definition: ($) =>
      seq("trait", field("name", $.identifier), $._newline,
        optional(field("body", $.trait_body))),

    trait_body: ($) =>
      seq($._indent, repeat(choice($.function_definition, $.trait_method_signature, $.with_clause, $._newline)), $._dedent),

    trait_method_signature: ($) =>
      seq("*", field("name", $.identifier), "(", optional(field("parameters", $.parameter_list)), ")", $._newline),

    // ─── Error / Taxonomy ─────────────────────────────────────
    error_definition: ($) =>
      prec(10, seq("err", field("name", $.identifier), $._newline,
        optional(field("body", $.error_body)))),

    error_body: ($) =>
      seq($._indent, repeat(choice($.error_variant, $.error_field, $._newline)), $._dedent),

    error_variant: ($) =>
      seq("err", field("name", $.identifier), $._newline),

    block: ($) =>
      seq($._indent, repeat1(choice($._statement, $._newline)), $._dedent),

    // ─── Statements ───────────────────────────────────────────
    _statement: ($) =>
      choice(
        $.binding,
        $.typed_binding,
        $.field_assignment,
        $.return_statement,
        $.if_statement,
        $.unless_statement,
        $.while_statement,
        $.until_statement,
        $.loop_statement,
        $.for_statement,
        $.for_range_statement,
        $.break_statement,
        $.continue_statement,
        $.unsafe_block,
        $.expression_statement,
      ),

    binding: ($) =>
      seq(field("name", $.identifier), "is", field("value", $._expression), $._newline),

    return_statement: ($) =>
      seq("return", optional($._expression), $._newline),

    break_statement: ($) => seq("break", $._newline),
    continue_statement: ($) => seq("continue", $._newline),

    if_statement: ($) =>
      seq("if", field("condition", $._expression), $._newline,
        field("body", $.block),
        repeat($.elif_clause),
        optional($.else_clause)),

    elif_clause: ($) =>
      seq("elif", field("condition", $._expression), $._newline, field("body", $.block)),

    else_clause: ($) =>
      seq("else", $._newline, field("body", $.block)),

    while_statement: ($) =>
      seq("while", field("condition", $._expression), $._newline, field("body", $.block)),

    loop_statement: ($) =>
      seq("loop", $._newline, field("body", $.block)),

    for_statement: ($) =>
      seq("for", field("variable", $.identifier), "in", field("iterable", $._expression), $._newline,
        field("body", $.block)),

    match_block: ($) =>
      seq($._indent, repeat1(choice($.match_arm, $._newline)), $._dedent),

    match_arm: ($) =>
      choice(
        seq(field("pattern", $.pattern), "?", field("body", $._expression), $._newline),
        seq(field("pattern", $.pattern), "?", $._newline, field("body", $.block)),
        seq("!", field("body", $._expression), $._newline),
        seq("_", "?", field("body", $._expression), $._newline),
      ),

    pattern: ($) =>
      choice(
        $.integer, $.float, $.string, $.template_string,
        $.true, $.false, $.none,
        $.constructor_pattern, $.list_pattern, $.tuple_pattern,
        $.identifier,
      ),

    expression_statement: ($) =>
      seq($._expression, $._newline),

    // ─── Expressions ──────────────────────────────────────────
    _expression: ($) =>
      choice(
        $.ternary_expression,
        $.error_propagation,
        $.guard_expression,
        $.throw_expression,
        $.pipeline_expression,
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.do_end_call,
        $.member_expression,
        $.index_expression,
        $.lambda_expression,
        $.match_expression,
        $.when_expression,
        $.spread_expression,
        $.list_comprehension,
        $.inline_asm,
        $.ptr_load,
        $._primary_expression,
      ),

    binary_expression: ($) => {
      const table = [
        ["or", PREC.OR], ["and", PREC.AND],
        ["is", PREC.EQUALITY], ["isnt", PREC.EQUALITY],
        [">", PREC.COMPARE], [">=", PREC.COMPARE],
        ["<", PREC.COMPARE], ["<=", PREC.COMPARE],
        ["|", PREC.BIT_OR], ["^", PREC.BIT_XOR], ["&", PREC.BIT_AND],
        ["<<", PREC.SHIFT], [">>", PREC.SHIFT],
        ["+", PREC.ADD], ["-", PREC.ADD],
        ["*", PREC.MUL], ["/", PREC.MUL], ["%", PREC.MUL],
      ];
      return choice(
        ...table.map(([op, p]) =>
          prec.left(p, seq(
            field("left", $._expression),
            field("operator", alias(op, $.operator)),
            field("right", $._expression),
          )),
        ),
      );
    },

    pipeline_expression: ($) =>
      prec.left(PREC.PIPELINE, seq(field("left", $._expression), "~", field("right", $._expression))),

    ternary_expression: ($) =>
      prec.right(PREC.TERNARY, seq(
        field("condition", $._expression), "?",
        field("consequence", $._expression), "!",
        field("alternative", $._expression),
      )),

    call_expression: ($) =>
      prec(PREC.CALL, seq(
        field("function", $._expression),
        "(",
        optional(field("arguments", $.argument_list)),
        ")",
      )),

    argument_list: ($) =>
      seq(
        $._argument,
        repeat(seq(",", $._argument)),
        optional(","),
      ),

    _argument: ($) => choice($.named_argument, $._expression),

    member_expression: ($) =>
      prec(PREC.MEMBER, seq(field("object", $._expression), ".", field("property", $.identifier))),

    index_expression: ($) =>
      prec(PREC.CALL, seq(field("object", $._expression), "[", field("index", $._expression), "]")),

    lambda_expression: ($) =>
      choice(
        seq("*", "fn", "(", optional(field("parameters", $.parameter_list)), ")", field("body", $._expression)),
        seq("*", "fn", "(", optional(field("parameters", $.parameter_list)), ")", $._newline, field("body", $.block)),
      ),

    match_expression: ($) =>
      seq("match", field("value", $._expression), $._newline, field("arms", $.match_block)),

    identifier: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer: (_$) => token(choice(
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
      /0[bB][01][01_]*/,
      /0[oO][0-7][0-7_]*/,
      /[0-9][0-9_]*/,
    )),

    float: (_$) => token(/[0-9][0-9_]*\.[0-9][0-9_]*/),

    template_string: ($) =>
      seq("'", repeat(choice($.template_content, $.template_interpolation, $.escape_sequence)), "'"),

    template_content: (_$) => token.immediate(prec(1, /[^'\\{]+/)),

    template_interpolation: ($) =>
      seq(token.immediate("{"), $._expression, "}"),

    true: (_$) => "true",
    list_literal: ($) =>
      seq("[",
        optional(seq(
          $._expression,
          repeat(seq(",", $._expression)),
          optional(","),
        )),
        "]"),

    map_literal: ($) =>
      seq("map", "(",
        optional(seq(
          $.map_entry,
          repeat(seq(",", $.map_entry)),
          optional(","),
        )),
        ")"),

    map_entry: ($) =>
      seq(field("key", $._expression), "is", field("value", $._expression)),

    comment: (_$) => token(seq("#", /.*/)),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
